# roles

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  NEWS.rst  NEWS.txt  README.md  README.rst  README.txt  cache.py  conf.py  dci-goal-examle.py  example.py  example2.py  index.html  index.rst  license.txt  mypy.ini  perform.py  privapi.rst  pyproject.toml  role.py  role2.py  roles.py  setup.cfg  setup.py  userapi.rst  wercker.yml
.github/workflows/: build.yml
django_dci/: README.txt  settings.py  urls.py
django_dci/account/: models.py  tests.py
docs/: build.sh  conf.py  django.txt  history.txt  index.txt  privapi.txt  usage.txt  userapi.txt
html/: NEWS.html  README.html  django.html  genindex.html  history.html  index.html  modindex.html  objects.inv  privapi.html  py-modindex.html  search.html  searchindex.js  usage.html  userapi.html
html/_sources/: index.txt
html/sources/: README.txt  django.txt  history.txt  index.txt  privapi.txt  usage.txt  userapi.txt
roles/: __init__.py  context.py  django.py  factory.py  role.py
test/: test_context.py  test_roles.py  test_types.py
tests/: test_context.py  test_roles.py  test_types.py
