[tool.poetry]
name = "roles"
version = "1.0.0"
description = "Role based software development"
authors = [
    "Arjan Molenaar <gaphor@gmail.com>"
]
maintainers = [
    "Arjan Molenaar <gaphor@gmail.com>",
]

license = "BSD License"
readme = "README.md"
homepage = "https://github.com/amolenaar/roles"
repository = "https://github.com/amolenaar/roles"
documentation = "https://github.com/amolenaar/roles"

keywords = ["role", "DCI", "data", "context", "interaction"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.0"

[tool.pytest.ini_options]
testpaths = [
    "test",
    "docs",
    ]
addopts = "--doctest-modules --doctest-glob='*.md' --doctest-glob='*.txt'"

[tool.coverage.run]
source = ["roles"]

[tool.ruff]
ignore = ["E501", "B019"]
line-length = 88
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "W",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
