[metadata]
name = roles
description = Role based development
author = Arjan Molenaar
author_email = gaphor@gmail.com
url = http://github.com/amolenaar/roles
license = BSD License
keywords = role DCI data context interaction

[options]
zip_safe = True
packages =
    roles
tests_require=
    pytest

[tool:pytest]
testpaths =
    roles
    test
    docs

python_files = test_*.py

# for coverage: --cov=gaphor/
# addopts = --doctest-modules

junit_family = xunit1
